fix(styles): remove those painful scrollbars from project view

--- a/src/components/specific/models/model-location/ModelLocation.scss
+++ b/src/components/specific/models/model-location/ModelLocation.scss
@@ -19,12 +19,15 @@
   }
 
   &__loader {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    transform: scale(2);
+
+    .bimdata-spinner {
+      transform: scale(2);
+    }
   }
 
   &__empty {
